# md2doc

./: .gitignore  LICENSE  Makefile  README.md  build.ps1  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: diagrams.md  gitflow.md
partes/: 00_portada.md  01_contenido.md
scripts/: install.ps1  install.sh
sections/: 00_cover.md
src/md2doc/: __init__.py  cli.py  diagrams.py  docx_builder.py  pdf_builder.py
src/md2doc/templates/default/sections/: 00_cover.md  01_content.md
tests/: test_cli.py
tools/: md_to_docx_cli.py  md_to_pdf_cli.py
